fix - Fixing a up component styling on mobile

--- a/src/components/Up/style.css
+++ b/src/components/Up/style.css
@@ -30,3 +30,10 @@
   border-color: var(--color-white);
   outline: none;
 }
+
+@media screen and (max-width: 375px) {
+  .scroll-to {
+    bottom: 2rem;
+    right: 1rem;
+  }
+}
